@startuml ecs_process_view
skinparam classAttributeIconSize 0
title ECS Process View
class FishingSystem <<system>>
class HookInputSystem <<system>>
class HookSystem <<system>>
class CollisionSystem <<system>>
class ScoreSystem <<system>>
class TransactionSystem <<system>>
class SpawningQueueSystem <<system>>
class StoreSystem <<system>>
class PlayerFactory <<factory>>
class TraderFactory <<factory>>
FishingSystem ..> GameEventBus
FishingSystem ..> FishCapturedEvent
FishingSystem ..> FishHitEvent
FishingSystem ..> PlayerFactory
HookInputSystem ..> HookInputEvent
HookInputSystem ..> ValidateUtil
HookSystem ..> Configuration
HookSystem ..> Logger
HookSystem ..> ValidateUtil
CollisionSystem ..> GameEventBus
CollisionSystem ..> FishHitEvent
ScoreSystem ..> FishCapturedEvent
ScoreSystem ..> ScoreEvent
ScoreSystem ..> DisplayScoreValueEvent
ScoreSystem ..> GameEventBus
TransactionSystem ..> TransactionEvent
TransactionSystem ..> PlayerFactory
TransactionSystem ..> GameEventBus
TransactionSystem ..> ValidateUtil
TransactionSystem ..> Logger
SpawningQueueSystem ..> OceanEntityFactory
SpawningQueueSystem ..> FishTypes
SpawningQueueSystem ..> GarbageTypes
SpawningQueueSystem ..> SharkTypes
SpawningQueueSystem ..> LevelConfig
SpawningQueueSystem ..> Logger
StoreSystem ..> TraderComponent
StoreSystem ..> Configuration
PlayerFactory ..> HookFactory
PlayerFactory ..> ReelFactory
PlayerFactory ..> SinkerFactory
TraderFactory ..> HookFactory
TraderFactory ..> ReelFactory
TraderFactory ..> SinkerFactory
@enduml